# investment-mcp-multi-agent-system

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/tests/: conftest.py
shared-platform/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
shared-platform/api_contracts/: README.md  request_models.py
shared-platform/app_logging/: README.md  formatters.py  logger.py
shared-platform/base/: README.md  base_component.py  base_service.py
shared-platform/ci/: README.md
shared-platform/config/: README.md  constants.py  env_loader.py  loader.py  secrets_manager.py  settings.py
shared-platform/connectors/: README.md
shared-platform/docker/: README.md  entrypoint.sh  healthcheck.sh
shared-platform/docs/: README.md  platform-usage.md
shared-platform/errors/: README.md  base.py  config_errors.py  external_errors.py  validation_errors.py
shared-platform/evaluation/: README.md  base_evaluator.py
shared-platform/feature_flags/: README.md  flag_manager.py
shared-platform/integrations/: README.md
shared-platform/llm_gateway/: README.md  model_registry.py
shared-platform/mlops/: README.md
shared-platform/providers/: README.md  base_provider.py
shared-platform/resilience/: README.md  fallback.py  retry.py  timeout.py
shared-platform/schemas/: README.md  document_schema.py  request_schema.py  response_schema.py  tool_schema.py
(+262 files in other folders)
